--- a/peermountain_core/src/main/res/values/strings.xml
+++ b/peermountain_core/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pm_btn_done_scanning">Done</string>
+    <string name="pm_btn_flash">Flash</string>
 </resources>
