End Xforms No Aes encryption on message body

--- a/peermountain_core/src/main/res/values/strings.xml
+++ b/peermountain_core/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
     <string name="pm_btn_flash">Flash</string>
 
     <string name="pm_ask_for_permission_again_camera">Without Camera permission the app can not continue. Would you give a permission ?</string>
+    <string name="pm_btn_save_form">Save Form</string>
+    <string name="pm_btn_send_form">Send Form</string>
 </resources>
