live selfie sdk

--- a/id_demo_app/src/main/res/values/strings.xml
+++ b/id_demo_app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
         your document's face image</string>
     <string name="dialog_ask_for_selfie_btn_yes">OK</string>
     <string name="dialog_ask_for_selfie_btn_no">Cancel</string>
+
+    <string name="dialog_ask_for_selfie_err_msg">Hi %s ,\nwe did not get any selfie images.\nDo you want to try again ?</string>
+
+    <string name="dialog_selfie_received_msg">Hi %s ,\nwe have your live selfie verified! \nHere we return all %d frames to be linked with your profile.</string>
 </resources>
