--- a/pm_scan_id_sdk/src/main/res/values/strings.xml
+++ b/pm_scan_id_sdk/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Scan ID SDK</string>
-    <string name="pm_msg_capture_mrz">Please capture your document from MRZ side</string>
+    <string name="pm_msg_capture_mrz">Please scan the back of your ID if it is not an International Passport.</string>
     <string name="pm_btn_done_scanning">Done</string>
     <string name="pm_btn_flash">Flash</string>
     <string name="pm_msg_capture_not_mrz">If your document has other side with your image, please capture it as well</string>
