--- a/pm_scan_id_sdk/src/main/res/values/strings.xml
+++ b/pm_scan_id_sdk/src/main/res/values/strings.xml
@@ -8,6 +8,5 @@
     <string name="pm_err_msg_scan_data">There was a problem with ID data extraction. Please try again!</string>
     <string name="pm_id_scan_lbl">ID SCAN</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="pm_scan_dialog_btn_scan_next_side">Scan</string>
 </resources>
